--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Oefening</title>
+    <title>Yannick</title>
 
     <!-- Custom CSS -->
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,6 +16,7 @@
 
     <!-- Style Yannick -->
     <link href="Style.css" rel="stylesheet" type="text/css">
+    <link href="Style2.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,8 +26,45 @@
     <![endkif] -->
 
 </head>
+<!--<nav class="navbar navbar-inverse navbar-fixed-top navbar-romadev" role="navigation">-->
+    <!--<button onclick="window.location.href='/Yannick2/slideshow.html'">Slideshow</button>-->
+<!--</nav>-->
+
+<nav class="navbar navbar-inverse navbar-fixed-top navbar-romadev" role="navigation">
+
+    <div class="container">
+        <!--Brand and toggle get grouped for better mobile display-->
+        <div class="navbar-header">
+
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+        </div>
+        <!--Collect the nav links, forms, and other content for toggling-->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="nav-container">
+                <ul class="navbar-fix">
+                    <li class="style-keuzemenu">
+                        <a href="/Yannick2/index.html" >Home</a>
+                    </li>
+                    <li class="style-keuzemenu">
+                        <a href="/Yannick2/slideshow.html">SlideShow</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
 
 <body>
+
 <div class="row">
     <div class="col-xs-12">
 
@@ -46,11 +84,10 @@
                 </div>
             </i>
         </div>
-<div>test</div>
-        <div class="col-xs-6">
+        <div class="col-xs-12 col-lg-12">
             <div class="text-right">
 
-                <div class="col-lg-12 col-xs-12">
+                <div class="col-xs-6">
         <span class="text-muted">
             Naam: <br/>
             Adres:<br/>
