--- a/slideshow.html
+++ b/slideshow.html
@@ -1,58 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>SlideShow</title>
 
-<script type="text/javascript"> 
+    <!-- Custom CSS -->
+    <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
 
-var image1 = new Image()
-image1.src="C:/Users/marja/Contacts/Desktop/Website/1.jpg"
+    <!-- Custom Fonts -->
+    <link href="bootstrap-3.3.5-dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
 
-var image2 = new Image()
-image2.src="C:/Users/marja/Contacts/Desktop/Website/2.jpg"
+    <!-- Style Yannick -->
+    <link href="Style.css" rel="stylesheet" type="text/css">
+    <link href="Style2.css" rel="stylesheet" type="text/css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endkif] -->
+</head>
+<nav class="navbar navbar-fixed-top navbar-romadev" role="navigation">
+    <div class="container">
+        <div class="row">
+            <div class="nav-container">
+                <ul class="navbar-fix col-xs-12">
+                    <li class="style-keuzemenu">
+                        <a href="/Yannick2/index.html">Home</a>
+                    </li>
+                    <li class="style-keuzemenu">
+                        <a href="/Yannick2/slideshow.html">SlideShow</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
 
-var image3 = new Image()
-image3.src="C:/Users/marja/Contacts/Desktop/Website/3.jpg"
+<body class="body_slideshow">
 
-var image4 = new Image()
-image4.src="C:/Users/marja/Contacts/Desktop/Website/4.jpg"
+<script type="text/javascript">
 
-var image5 = new Image()
-image5.src="C:/Users/marja/Contacts/Desktop/Website/5.jpg"
+    var image1 = new Image();
+    image1.src = "1.jpg";
 
-var image6 = new Image()
-image6.src="C:/Users/marja/Contacts/Desktop/Website/6.jpg"
+    var image2 = new Image();
+    image2.src = "2.jpg";
 
-var image7 = new Image()
-image7.src="C:/Users/marja/Contacts/Desktop/Website/7.jpg"
+    var image3 = new Image();
+    image3.src = "3.jpg";
 
-var image8 = new Image()
-image8.src="C:/Users/marja/Contacts/Desktop/Website/8.jpg"
+    var image4 = new Image();
+    image4.src = "4.jpg"
+
+    var image5 = new Image();
+    image5.src = "5.jpg";
+
+    var image6 = new Image();
+    image6.src = "6.jpg";
+
+    var image7 = new Image();
+    image7.src = "7.jpg";
+
+    var image8 = new Image();
+    image8.src = "8.jpg";
 
 </script>
 
-<style> 
-
-body{background-color:#BCC2B5; margin: 0 auto; margin-top: 100px; text-align:center}
+<style>
 
 </style>
-
-</head>
-
-<body>
-
-<img src="C:/Users/marja/Contacts/Desktop/Website/1.jpg" name="slideshow" alt="imageslideshow">
-<script type="text/javascript"> 
-var numberImage = 1
-function myslide(){
-document.images.slideshow.src=eval("image"+numberImage+".src")
-if(numberImage <= 8 )
-++ numberImage
-else
-numberImage = 1
-setTimeout("myslide()", 4500)
-}
-myslide()
+<img src="1.jpg" name="slideshow" alt="imageslideshow">
+<script type="text/javascript">
+    var numberImage = 1
+    function myslide() {
+        document.images.slideshow.src = eval("image" + numberImage + ".src")
+        if (numberImage <= 8)
+            ++numberImage
+        else
+            numberImage = 1
+        setTimeout("myslide()", 4500)
+    }
+    myslide()
 
 </script>
 
